src/main/kotlin/net/internetisalie/lunar/lang/psi/lua.bnf
{
    // not used except for preview
    tokens = [
        WS     =   'regexp:[ \t\v\a]+'
        NUMBER =   'regexp:[0-9]+([.][0-9]+)?([Ee][+-]?[0-9]+)?'
        STRING =   'regexp:"[^"]*"'

        AND    = 'and'
        BREAK  = 'break'
        DO     = 'do'
        ELSE   = 'else'
        ELSEIF = 'elseif'
        END    = 'end'
        FALSE  = 'false'
        FOR    = 'for'
        FUNCTION = 'function'
        IF     = 'if'
        IN     = 'in'
        GOTO   = 'goto'
        LOCAL  = 'local'
        NIL    = 'nil'
        NOT    = 'not'
        OR     = 'or'
        REPEAT = 'repeat'
        RETURN = 'return'
        THEN   = 'then'
        TRUE   = 'true'
        UNTIL  = 'until'
        WHILE  = 'while'

        MARKER = '::'
        SHEBANG = '#!'
        CONCAT = '..'
        ELLIPSIS = '...'
        EQ     = '=='
        GE     = '>='
        LE     = '<='
        NE     = '~='
        PLUS   = '+'
        MINUS  = '-'
        MULT   = '*'
        DIV    = '/'
        INTDIV = '//'
        EXP    = '^'
        MOD    = '%'
        ASSIGN = '='
        GT     = '>'
        LT     = '<'
        LPAREN = '('
        RPAREN = ')'
        LBRACK = '['
        RBRACK = ']'
        LCURLY = '{'
        RCURLY = '}'
        GETN   = '#'
        COMMA  = ','
        SEMI   = ';'
        COLON  = ':'
        DOT    = '.'
        AMP    = '&'
        NEG    = '~'
        PIPE   = '|'
        BSR    = '>>'
        BSL    = '<<'
        LONGCOMMENT_BEGIN  = '--[['
        LONGCOMMENT_END  = ']]--'
        SHORTCOMMENT  = '--'

        IDENTIFIER   =   'regexp:[_a-zA-Z][_a-zA-Z0-9]*'
    ]
//    generate=[tokenAccessors="no"]

    parserClass="net.internetisalie.lunar.lang.parser.LuaParser"
    parserImports=[]

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    tokenTypeClass="net.internetisalie.lunar.lang.psi.LuaTokenType"

    elementTypeHolderClass="net.internetisalie.lunar.lang.psi.LuaElementTypes"
    elementTypeClass="net.internetisalie.lunar.lang.psi.LuaElementType"

    psiClassPrefix='Lua'
    psiPackage='net.internetisalie.lunar.lang.psi'
    psiImplPackage='net.internetisalie.lunar.lang.psi.impl'
    psiImplUtilClass='net.internetisalie.lunar.lang.psi.LuaPsiImplUtil'
}

// https://parrot.github.io/parrot-docs0/0.4.7/html/languages/lua/doc/lua51.bnf.html

root ::= block*
block ::= not_eof {statement SEMI?}* [finalStatement SEMI?]
private not_eof ::= !<<eof>>

statement ::= varList '=' exprList
    | funcCall
    | label
    | BREAK
    | gotoStatement
    | DO block END
    | WHILE expr DO block END
    | REPEAT block UNTIL expr
    | IF expr THEN block {ELSEIF expr THEN block}* [ELSE block] END
    | FOR IDENTIFIER '=' expr ',' expr [',' expr] DO block END
    | FOR nameList IN exprList DO block END
    | funcDecl
    | localFuncDecl
    | localVarDecl
gotoStatement ::= GOTO labelRef
finalStatement ::= RETURN [exprList] [';']
label ::= '::' labelName '::'
funcName ::= IDENTIFIER {'.' IDENTIFIER}* [':' IDENTIFIER]
varList ::= var {',' var}*
nameList ::= IDENTIFIER {',' IDENTIFIER}*
exprList ::= expr {',' expr}*

localFuncDecl ::= LOCAL FUNCTION IDENTIFIER funcBody
funcDecl ::= FUNCTION funcName funcBody {
    implements = [
        "net.internetisalie.lunar.luadoc.lang.psi.LuaDocCommentOwner"
        "net.internetisalie.lunar.luacats.lang.psi.LuaCatsCommentOwner"
    ]
    methods=[getDocComment getCatsComment]
}

localVarDecl ::= LOCAL nameList ['=' exprList]

labelRef ::= IDENTIFIER {
    mixin="net.internetisalie.lunar.lang.psi.LuaNameRefElementImpl"
    implements="net.internetisalie.lunar.lang.psi.LuaNameRefElement"
}
labelName ::= IDENTIFIER {
    mixin="net.internetisalie.lunar.lang.psi.LuaNameDeclElementImpl"
    implements="net.internetisalie.lunar.lang.psi.LuaNameDeclElement"
}

// TODO
// http://lua-users.org/wiki/LpegRecipes - Lua Parser (batrick)
//  -- Let's come up with a syntax that does not use left recursion
//  -- (only listing changes to Lua 5.1 extended BNF syntax)
//  -- value ::= nil | false | true | Number | String | '...' | function |
//  --           tableconstructor | functioncall | var | '(' exp ')'
//  -- exp ::= unop exp | value [binop exp]
//  -- prefix ::= '(' exp ')' | Name
//  -- index ::= '[' exp ']' | '.' Name
//  -- call ::= args | ':' Name args
//  -- suffix ::= call | index
//  -- var ::= prefix {suffix} index | Name
//  -- functioncall ::= prefix {suffix} call

// use right-recursion for expressions
expr ::= (NIL | FALSE | TRUE | NUMBER | STRING | ELLIPSIS | funcDef | prefixExpr | tableConstructor | unOp expr) {binOp expr}*

var ::= (IDENTIFIER | '(' expr ')' varSuffix) {varSuffix}*
prefixExpr ::= varOrExp nameAndArgs*
funcCall ::= varOrExp nameAndArgs+
varOrExp ::= var | '(' expr ')'
nameAndArgs ::= (':' IDENTIFIER)? args
varSuffix ::= nameAndArgs* ('[' expr ']' | '.' IDENTIFIER)

args ::=  '(' [exprList] ')' | tableConstructor | STRING

funcDef ::= FUNCTION funcBody

funcBody ::= '(' [parList] ')' block END

parList ::= nameList [',' '...'] | '...'

tableConstructor ::= '{' [fieldList] '}'

fieldList ::= field {fieldSep field}* [fieldSep]

field ::= '[' expr ']' '=' expr | IDENTIFIER '=' expr | expr

fieldSep ::= ',' | ';'

binOp ::=  '+' | '-' | '*' | '/' | '//' | '^' | '%' |
    '&' | '~' | '|' | '>>' | '<<' | '..' |
    '<' | '<=' | '>' | '>=' | '==' | '~=' |
    AND | OR

unOp ::= '-' | NOT | '#' | '~'
